[package]
name = "tlsn-core"
authors = ["TLSNotary Team"]
description = "Core types for TLSNotary"
keywords = ["tls", "mpc", "2pc", "types"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.4"
edition = "2021"

[features]
default = []
fixtures = ["dep:hex"]

[dependencies]
tlsn-tls-core = { workspace = true, features = ["serde"] }

tlsn-utils.workspace = true

mpz-core.workspace = true
mpz-garble-core.workspace = true
mpz-circuits.workspace = true

thiserror.workspace = true
serde.workspace = true
p256 = { workspace = true, features = ["serde"] }
webpki-roots.workspace = true
rs_merkle.workspace = true
rstest = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
bytes = { workspace = true, features = ["serde"] }
opaque-debug.workspace = true

bimap = { version = "0.6.3", features = ["serde"] }

web-time.workspace = true
mina-signer = { git = "https://github.com/o1-labs/proof-systems" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems" }
bcs = "0.1.6"
bitcoin = "0.31.1"
eyre = "0.6.8"
signature = "2.2.0"


[dev-dependencies]
rstest.workspace = true
hex.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
bincode.workspace = true

[[test]]
name = "api"
required-features = ["fixtures"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
getrandom = { version = "0.2", features = ["js"] }
